# project-ikaros

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  tools.go
.github/workflows/: deploy.yml
analyzer-web/: index.js  package-lock.json  package.json
cmd/analyzer/: main.go
cmd/generator/: main.go
cmd/pid-simulator/: main.go
cmd/serial-monitor/: main.go
cmd/serial-relay/: main.go
cmd/tower/: main.go
cmd/viewer/: main.go
deployment/: docker-compose.yml
flight-controller/: CMakeLists.txt  blink.c  main.c  mpu6050.c  mpu6050.h  mpu6050_reader.ino  sensor_fusion.h  servo.h  vmath.h
includes/delto/: pid.h  rayutil.h  serial.h  util.h
internal/analyzer/: di.go
internal/analyzer/api/: api.go  controller_template.go
internal/analyzer/api/assets/: index.js  main.js
internal/analyzer/api/templates/: index.html
internal/conf/: conf.go
internal/optional/: optional.go
internal/rayutil/: rayutil.go
internal/serial/: util.go
internal/tower/: client.go  di.go
internal/tower/api/: controller_asset.go  controller_template.go  controller_websocket.go
internal/tower/api/assets/: index.js  main.css
internal/tower/api/templates/: index.html
internal/tower/broker/: broker.go
internal/viewer/di/: di.go
internal/web/: controller.go  middleware.go  template.go  websocket.go
tower/: delto_util.h  edutil.h  rayutil.h  tower.c
